--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,51 +1,42 @@
 body {
-  font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   padding-top: 54px;
-  color: #868e96;
-}
+  color: #868e96; }
 
 @media (min-width: 992px) {
-  body {
+  body.side-panel {
     padding-top: 0;
-    padding-left: 17rem;
-  }
-}
+    padding-left: 17rem; } }
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   font-weight: 700;
   text-transform: uppercase;
-  color: #343a40;
-}
+  color: #343a40; }
 
 h1 {
   font-size: 6rem;
-  line-height: 5.5rem;
-}
+  line-height: 5.5rem; }
 
 h2 {
-  font-size: 3.5rem;
-}
+  font-size: 3.5rem; }
 
 h3 {
-  font-size: 2rem;
-}
+  font-size: 2rem; }
 
 p.lead {
   font-size: 1.15rem;
-  font-weight: 400;
-}
+  font-weight: 400; }
 
 .subheading {
   text-transform: uppercase;
   font-weight: 500;
-  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1.5rem;
-}
+  font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-size: 1.5rem; }
 
 .social-icons a {
   display: inline-block;
@@ -57,30 +48,23 @@ p.lead {
   text-align: center;
   font-size: 1.5rem;
   line-height: 3.5rem;
-  margin-right: 1rem;
-}
-.social-icons a:last-child {
-  margin-right: 0;
-}
-.social-icons a:hover {
-  background-color: #BD5D38;
-}
+  margin-right: 1rem; }
+  .social-icons a:last-child {
+    margin-right: 0; }
+  .social-icons a:hover {
+    background-color: #BD5D38; }
 
 .dev-icons {
-  font-size: 3rem;
-}
-.dev-icons .list-inline-item i:hover {
-  color: #BD5D38;
-}
+  font-size: 3rem; }
+  .dev-icons .list-inline-item i:hover {
+    color: #BD5D38; }
 
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 800;
   letter-spacing: 0.05rem;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
 #sideNav .navbar-toggler:focus {
-  outline-color: #d48a6e;
-}
+  outline-color: #d48a6e; }
 
 @media (min-width: 992px) {
   #sideNav {
@@ -91,92 +75,91 @@ p.lead {
     display: flex;
     flex-direction: column;
     width: 17rem;
-    height: 100vh;
-  }
-  #sideNav .navbar-brand {
-    display: flex;
-    margin: auto auto 0;
-    padding: 0.5rem;
-  }
-  #sideNav .navbar-brand .img-profile {
-    max-width: 10rem;
-    max-height: 10rem;
-    border: 0.5rem solid rgba(255, 255, 255, 0.2);
-  }
-  #sideNav .navbar-collapse {
-    display: flex;
-    align-items: flex-start;
-    flex-grow: 0;
-    width: 100%;
-    margin-bottom: auto;
-  }
-  #sideNav .navbar-collapse .navbar-nav {
-    flex-direction: column;
-    width: 100%;
-  }
-  #sideNav .navbar-collapse .navbar-nav .nav-item {
-    display: block;
-  }
-  #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
-    display: block;
-  }
-}
+    height: 100vh; }
+    #sideNav .navbar-brand {
+      display: flex;
+      margin: auto auto 0;
+      padding: 0.5rem; }
+      #sideNav .navbar-brand .img-profile {
+        max-width: 10rem;
+        max-height: 10rem;
+        border: 0.5rem solid rgba(255, 255, 255, 0.2); }
+    #sideNav .navbar-collapse {
+      display: flex;
+      align-items: flex-start;
+      flex-grow: 0;
+      width: 100%;
+      margin-bottom: auto; }
+      #sideNav .navbar-collapse .navbar-nav {
+        flex-direction: column;
+        width: 100%; }
+        #sideNav .navbar-collapse .navbar-nav .nav-item {
+          display: block; }
+          #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
+            display: block; } }
 section.resume-section {
   padding-top: 5rem !important;
   padding-bottom: 5rem !important;
-  max-width: 75rem;
-}
-section.resume-section .resume-item .resume-date {
-  min-width: none;
-}
+  max-width: 75rem; }
+  section.resume-section .resume-item .resume-date {
+    min-width: none; }
 
 @media (min-width: 768px) {
   section.resume-section {
-    min-height: 100vh;
-  }
-  section.resume-section .resume-item .resume-date {
-    min-width: 18rem;
-  }
-}
+    min-height: 100vh; }
+    section.resume-section .resume-item .resume-date {
+      min-width: 18rem; } }
 @media (min-width: 992px) {
   section.resume-section {
     padding-top: 3rem !important;
-    padding-bottom: 3rem !important;
-  }
-}
+    padding-bottom: 3rem !important; } }
 .bg-primary {
-  background-color: #BD5D38 !important;
-}
+  background-color: #BD5D38 !important; }
 
 .text-primary {
-  color: #BD5D38 !important;
-}
+  color: #BD5D38 !important; }
 
 a {
-  color: #BD5D38;
-}
-a:hover, a:focus, a:active {
-  color: #824027;
-}
+  color: #BD5D38; }
+  a:hover, a:focus, a:active {
+    color: #824027; }
 
 /*============Custom Sytle=============*/
 .multiselect-native-select {
   display: block;
-  width: 100%;
-}
-.multiselect-native-select .btn-group, .multiselect-native-select .multiselect {
-  width: 100%;
-}
-.multiselect-native-select .btn {
-  text-align: left;
-  background: transparent;
-  border: 1px solid #ced4da;
-  color: #495057;
-}
-.multiselect-native-select .dropdown-toggle::after {
-  position: absolute;
-  right: 10px;
-  top: 15px;
-}
+  width: 100%; }
+  .multiselect-native-select .btn-group, .multiselect-native-select .multiselect {
+    width: 100%; }
+  .multiselect-native-select .btn {
+    text-align: left;
+    background: transparent;
+    border: 1px solid #ced4da;
+    color: #495057; }
+  .multiselect-native-select .dropdown-toggle::after {
+    position: absolute;
+    right: 10px;
+    top: 15px; }
+
+ul.breadcrumb {
+  padding: 10px 16px;
+  list-style: none;
+  background-color: #eee; }
+
+ul.breadcrumb li {
+  display: inline;
+  font-size: 18px; }
+
+ul.breadcrumb li + li:before {
+  padding: 8px;
+  color: black;
+  content: "/\00a0"; }
+
+ul.breadcrumb li a {
+  color: #0275d8;
+  text-decoration: none; }
+
+ul.breadcrumb li a:hover {
+  color: #01447e;
+  text-decoration: underline; }
 
 /*# sourceMappingURL=style.css.map */
