--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,7 +2,7 @@
 @import "mixins.scss";
 @import "global.scss";
 @import "nav.scss";
-@import "resume-item.scss";
+@import "style-item.scss";
 @import "bootstrap-overrides.scss";
 
 
