--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,9 @@ p.lead {
   .dev-icons .list-inline-item i:hover {
     color: #BD5D38; }
 
+type[submit] {
+  background: #bd5d38; }
+
 .side-panel #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 800;
   letter-spacing: 0.05rem;
