--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -35,5 +35,7 @@ $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
 
 // Page Variables
+$c-orange: #bd5d38;
+
 
 $sidebar-base-width: 17rem;
