--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -35,7 +35,15 @@ $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
 
 // Page Variables
+
+//----------FONT COLORS-------------
+
 $c-orange: #bd5d38;
+
+//----------BACKGROUND COLORS-------------
+
+$bg-orange: #bd5d38;
+$bg-d-orange:#af380b;
 
 
 $sidebar-base-width: 17rem;
