--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -51,3 +51,56 @@ ul.breadcrumb li a:hover {
     color: #01447e;
     text-decoration: underline;
 }
+
+
+
+
+/*====================REGULAR CSS====================*/
+
+@media (max-width: 767px){
+	.pd_100 {
+		padding-top: 35px;
+	}
+}
+.c-thead{
+	background: $bg-orange;
+	border-color: $bg-orange;
+	color:#fff;
+}
+.btn-secondary ,.btn-secondary:hover{
+	color: #fff;
+	background-color: $bg-orange;
+	border-color: $bg-orange;
+	
+}
+.btn-secondary:active {
+	@include shadow(none !important);
+}
+.page-item.active .page-link {
+	z-index: 1;
+	color: #fff;
+	background-color: $bg-orange;
+	border-color: $bg-orange;
+}
+table.dataTable thead .sorting, table.dataTable thead .sorting_asc, table.dataTable thead .sorting_desc, table.dataTable thead .sorting_asc_disabled, table.dataTable thead .sorting_desc_disabled {
+	cursor: pointer;
+	background-repeat: no-repeat;
+	background-position: center left;
+	background: $bg-orange;
+	color: #fff;
+}
+table.dataTable thead th, table.dataTable tfoot th{
+	font-weight: 500;
+}
+#dashboard h2 {
+	text-align: left;
+}
+table.dataTable thead th, table.dataTable thead td ,table.dataTable tfoot th, table.dataTable tfoot td{
+    border-bottom: 1px solid $bg-d-orange;
+	border-top: 1px solid $bg-d-orange;
+}
+@media all and (max-width:767px){
+	.table-responsive{
+		padding-top: 40px !important;
+	}
+}
