--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,10 @@ body.side-panel {
   color: #fff;
   width: 100%; }
 
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: rgba(0, 0, 0, 0.2) !important; }
+
 button.dt-button:active:not(.disabled):hover:not(.disabled), button.dt-button.active:not(.disabled):hover:not(.disabled), div.dt-button:active:not(.disabled):hover:not(.disabled), div.dt-button.active:not(.disabled):hover:not(.disabled), a.dt-button:active:not(.disabled):hover:not(.disabled), a.dt-button.active:not(.disabled):hover:not(.disabled) {
   background: #bd5d38;
   border-color: #bd5d38;
