--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,6 +280,24 @@ a {
 .content {
   padding-bottom: 45px; }
 
+@media all and (min-width: 768px) {
+  .h-effcts > li > a {
+    position: relative; }
+    .h-effcts > li > a:after {
+      content: '';
+      display: block;
+      width: 0;
+      height: 2px;
+      background: #fff;
+      left: 0;
+      position: absolute;
+      -webkit-transition: 0.4s;
+      -moz-transition: 0.4s;
+      -ms-transition: 0.4s;
+      -o-transition: 0.4s;
+      transition: 0.4s; }
+    .h-effcts > li > a:hover:after {
+      width: 100%; } }
 .h-effcts > li > a {
   position: relative; }
   .h-effcts > li > a:after {
@@ -289,6 +307,8 @@ a {
     height: 2px;
     background: #fff;
     left: 0;
+    right: 0;
+    margin: 0 auto;
     position: absolute;
     -webkit-transition: 0.4s;
     -moz-transition: 0.4s;
