--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,6 @@ ul, ol {
   width: 100%; }
 
 ::-webkit-input-placeholder {
-  /* Chrome/Opera/Safari */
   color: rgba(0, 0, 0, 0.25) !important; }
 
 button.dt-button:active:not(.disabled):hover:not(.disabled), button.dt-button.active:not(.disabled):hover:not(.disabled), div.dt-button:active:not(.disabled):hover:not(.disabled), div.dt-button.active:not(.disabled):hover:not(.disabled), a.dt-button:active:not(.disabled):hover:not(.disabled), a.dt-button.active:not(.disabled):hover:not(.disabled) {
@@ -107,7 +106,7 @@ button.dt-button:focus:not(.disabled), div.dt-button:focus:not(.disabled), a.dt-
   border-color: #af380b; }
 
 .pdt {
-  padding-top: 100px; }
+  padding-top: 91px; }
 
 .breadcrumb-wrap {
   background: #3c2727; }
@@ -237,6 +236,9 @@ a {
     color: #824027; }
 
 @media all and (max-width: 767px) {
+  .pdt {
+    padding-top: 66px; }
+
   .logo {
     width: 50px;
     height: 50px; }
