--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -125,7 +125,7 @@ ul,ol{
  	width: 100%;
 }
  
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+::-webkit-input-placeholder { 
   	color: rgba(0,0,0,0.25) !important;
 }
 
@@ -140,7 +140,7 @@ button.dt-button:focus:not(.disabled), div.dt-button:focus:not(.disabled), a.dt-
 	border-color:$bg-d-orange;
 }
 .pdt{
-	padding-top: 100px;
+	padding-top: 91px;
 }
 
 //-----------Breadcrumbs-----
