--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -130,3 +130,40 @@ select{
 	color: #495057;
 	
 }
+
+
+input[type=checkbox] {
+    cursor: pointer;
+    font-size: 10px;
+    visibility: hidden;
+    top: 0;
+    left: 0;
+    transform: scale(1.5);
+}
+
+input[type=checkbox]:after {
+    content: '';
+	position: absolute;
+	width: 18px;
+	height: 15px;
+	border: 1px solid $bg-l-black;
+	background: $bg-l-black;
+	left: 0;
+	top: 0;
+	visibility: visible;
+}
+
+input[type=checkbox]:checked:before {
+    content: '';
+	position: absolute;
+	width: 12px;
+	height: 6px;
+	border:  2px solid transparent;
+	border-color: transparent transparent #fff #fff;
+	left: 3px;
+	z-index: 2;
+	top: 3px;
+	visibility: visible;
+	@include transform(rotate(-45deg));
+	
+}
