--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,4 +386,40 @@ select {
   border-radius: 0.25rem;
   color: #495057; }
 
+input[type=checkbox] {
+  cursor: pointer;
+  font-size: 10px;
+  visibility: hidden;
+  top: 0;
+  left: 0;
+  transform: scale(1.5); }
+
+input[type=checkbox]:after {
+  content: '';
+  position: absolute;
+  width: 18px;
+  height: 15px;
+  border: 1px solid #3c2727;
+  background: #3c2727;
+  left: 0;
+  top: 0;
+  visibility: visible; }
+
+input[type=checkbox]:checked:before {
+  content: '';
+  position: absolute;
+  width: 12px;
+  height: 6px;
+  border: 2px solid transparent;
+  border-color: transparent transparent #fff #fff;
+  left: 3px;
+  z-index: 2;
+  top: 3px;
+  visibility: visible;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg); }
+
 /*# sourceMappingURL=style.css.map */
