--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -142,12 +142,13 @@ button.dt-button:focus:not(.disabled), div.dt-button:focus:not(.disabled), a.dt-
 .pdt{
 	padding-top: 91px;
 }
-
+.content{
+	min-height: calc(100% -100px);
+}
 //-----------Breadcrumbs-----
 
 .breadcrumb-wrap{
 	background: #3c2727;
- 
 }
 //-----Breadcrumb
 ul.breadcrumb {
