--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -54,6 +54,9 @@
 		}
 	  }
 	}
+    .tab-content>.tab-pane {
+        display: block;
+    }
 }
 /*================================CUSTOM HEADER STYLE==========================================*/
 .bg-orange{
