--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -199,3 +199,138 @@ table{
 	background: url(../img/login-bg) no-repeat center bottom;
 	@include  background-size(cover);
 }
+
+/* ========================== Card ======================== */
+.card {
+  background: #fff;
+  font-size: .875rem;
+  border: 0;
+  margin-bottom: 30px;
+  margin-top: 20px;
+  color: #333333;
+  width: 100%;
+  -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14); }
+
+.card [class*="card-header-"] .card-icon, .card [class*="card-header-"] .card-text {
+  background-color: #999999;
+  padding: 15px;
+  margin-top: -20px;
+  margin-right: 15px;
+  float: left; }
+
+.card [class*="card-header-"] .card-icon {
+  -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+  width: 100%;
+  text-align: center;
+  min-height: 40px;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center; }
+
+.card [class*="card-header-"] {
+  margin: 0px 15px 0;
+  padding: 0;
+  position: relative; }
+
+.card .card-header {
+  z-index: 3 !important; }
+
+.card [class*="card-header-"], .card[class*="bg-"] {
+  color: #fff; }
+
+.card .card-header {
+  border-bottom: none;
+  background: transparent; }
+
+.card.card-stats .card-header .card-category:not([class*="text-"]) {
+  color: #999999;
+  font-size: 14px; }
+
+.card .card-header.card-header-icon .card-title, .card .card-header.card-header-text .card-title {
+  color: #3C4858;
+  line-height: 1.5; }
+
+.card.card-stats .card-header .card-title, .card.card-stats .card-header .card-category {
+  margin: 0; }
+
+.card.card-stats .card-header .card-icon + .card-title, .card.card-stats .card-header .card-icon + .card-category {
+  padding-top: 3px; }
+
+.card.card-stats .card-header.card-header-icon, .card.card-stats .card-header.card-header-text {
+  text-align: right; }
+
+.card-body, .card-footer {
+  border: 0 none;
+  background: #fff;
+  margin-bottom: 0; }
+
+.card.card-stats .card-header + .card-footer {
+  border-top: 1px solid #eee;
+  margin-top: 4px; }
+
+.card .card-body + .card-footer, .card .card-footer {
+  padding: 0;
+  padding-top: 10px;
+  margin: 0 15px 10px;
+  border-radius: 0;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.card .card-header-warning .card-icon, .card .card-header-warning .card-text, .card .card-header-warning:not(.card-header-icon):not(.card-header-text), .card.bg-warning, .card.card-rotate.bg-warning .front, .card.card-rotate.bg-warning .back {
+  background: linear-gradient(60deg, #ffa726, #fb8c00); }
+
+.card .card-header-success .card-icon, .card .card-header-success .card-text, .card .card-header-success:not(.card-header-icon):not(.card-header-text), .card.bg-success, .card.card-rotate.bg-success .front, .card.card-rotate.bg-success .back {
+  background: linear-gradient(60deg, #66bb6a, #43a047); }
+
+.card .card-header-danger .card-icon, .card .card-header-danger .card-text, .card .card-header-danger:not(.card-header-icon):not(.card-header-text), .card.bg-danger, .card.card-rotate.bg-danger .front, .card.card-rotate.bg-danger .back {
+  background: linear-gradient(60deg, #ef5350, #e53935); }
+
+.card .card-header-info .card-icon, .card .card-header-info .card-text, .card .card-header-info:not(.card-header-icon):not(.card-header-text), .card.bg-info, .card.card-rotate.bg-info .front, .card.card-rotate.bg-info .back {
+  background: linear-gradient(60deg, #26c6da, #00acc1); }
+
+.card-footer .stats {
+  color: #999999;
+  font-size: 12px;
+  min-height: 36px;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center; }
+
+.c_size {
+  font-size: 125%; }
+
+/*# sourceMappingURL=style.css.map */
+//{
+//  padding-top: 0; }
+//  .card .card-title {
+//    clear: left; }
+.wrapper-card{
+    background: #ccc;
+    margin-bottom:2px;
+    *{
+        text-align: center !important;
+    }
+    .img-fluid{
+        border: 2px solid #fff;
+     }
+}
