--- a/assets/scss/_bootstrap-overrides.scss
+++ b/assets/scss/_bootstrap-overrides.scss
@@ -3,14 +3,14 @@
 }
 
 .text-primary {
-  color: $primary !important;
+  color: $primary !important; 
 }
-
-a {
-  color: $primary;
-  &:hover,
-  &:focus,
-  &:active {
-    color: darken($primary, 15%);
-  }
-}
+//
+//a {
+//  color: $primary;
+//  &:hover,
+//  &:focus,
+//  &:active {
+//    color: darken($primary, 15%);
+//  }
+//}
