new page content.php changes 5

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -39,12 +39,13 @@ $dark:          $gray-800 !default;
 //----------FONT COLORS-------------
 
 $c-orange: #bd5d38;
-
+$c-l-black: #3c2727;
 //----------BACKGROUND COLORS-------------
 
 $bg-orange: #bd5d38;
 $bg-d-orange:#af380b;
 $bg-l-black: #3c2727;
+$bg-tr-black:rgba(60, 39, 39, 0.7);
 
 
 $sidebar-base-width: 17rem;
