--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -602,6 +602,10 @@ table {
 .content-page h1 {
   border-bottom: 2px solid #3c2727;
   text-align: center; }
+.content-page .col-2 {
+  border-right: 2px solid #3c2727; }
+.content-page .col-10 {
+  border-bottom: 2px solid #3c2727; }
 
 .unit-card {
   padding: 10px;
@@ -612,6 +616,7 @@ table {
   border-radius: 0;
   text-align: center;
   font-size: 18px;
-  border-bottom: 2px solid rgba(60, 39, 39, 0.7); }
+  border-bottom: 2px solid rgba(60, 39, 39, 0.7);
+  margin-bottom: 0; }
 
 /*# sourceMappingURL=style.css.map */
