--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -176,3 +176,15 @@ ul.breadcrumb li+li:before {
 input[disabled]{
 	cursor: not-allowed;
 }
+
+//---------------- Scroll Stylr -----------
+::-webkit-scrollbar {
+  width: 5px; }
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px; }
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
